@@ -12,7 +12,7 @@ Thus, the OBP API abstracts away the peculiarities of each core banking system s
 
 Our tag line is: Bank as a Platform. Transparency as an Asset.
 
-The API supports OAuth 1.0a, OAuth 2, OpenID Connect and other authentication methods. See [here](https://github.com/OpenBankProject/OBP-API/wiki/Authentication) for more information.
+The API supports OAuth 1.0a, OAuth 2, OpenID Connect (OIDC) and other authentication methods. See [here](https://github.com/OpenBankProject/OBP-API/wiki/Authentication) for more information.
 
 The project roadmap is available [here.](https://github.com/OpenBankProject/OBP-API/blob/develop/roadmap.md)
 
@@ -25,8 +25,26 @@ Please refer to the [wiki](https://github.com/OpenBankProject/OBP-API/wiki) for 
 
 OBP instances support multiple versions of the API simultaniously (unless they are deactivated in config)
 To see the status (DRAFT, STABLE or BLEEDING-EDGE) of an API version, look at the root endpoint e.g. /obp/v2.0.0/root or /obp/v3.0.0/root
+```
+24.01.2017, [V1.2.1](https://apisandbox.openbankproject.com/obp/v1.2.1/root) was marked as stable. 
+24.01.2017, [V1.3.0](https://apisandbox.openbankproject.com/obp/v1.3.0/root) was marked as stable. 
+08.06.2017, [V2.0.0](https://apisandbox.openbankproject.com/obp/v2.0.0/root) was marked as stable. 
+27.10.2018, [V2.1.0](https://apisandbox.openbankproject.com/obp/v2.1.0/root) was marked as stable. 
+27.10.2018, [V2.2.0](https://apisandbox.openbankproject.com/obp/v2.2.0/root) was marked as stable. 
+18.11.2020, [V3.0.0](https://apisandbox.openbankproject.com/obp/v3.0.0/root) was marked as stable. 
+18.11.2020, [V3.1.0](https://apisandbox.openbankproject.com/obp/v3.1.0/root) was marked as stable. 
+16.12.2022, [V4.0.0](https://apisandbox.openbankproject.com/obp/v4.0.0/root) was marked as stable. 
+16.12.2022, [V5.0.0](https://apisandbox.openbankproject.com/obp/v5.0.0/root) was marked as stable. 
+```
 
-On the 8th of June 2017, [V2.0.0](https://apisandbox.openbankproject.com/obp/v2.0.0/root) was marked as stable.
+
+
+
+
+
+
+
+
 
 ## LICENSE
 .
@@ -106,7 +124,7 @@ To compile and run jetty, install Maven 3, create your configuration in obp-api/
 
 Set memory options
 
-    export MAVEN_OPTS="-Xmx3000m -XX:MaxPermSize=512m"
+    export MAVEN_OPTS="-Xmx3000m -Xss2m"
 
 Run one test
 
@@ -136,7 +154,8 @@ Set DB options in props file:
     db.url=jdbc:h2:./obp_api.db;DB_CLOSE_ON_EXIT=FALSE
     
 In order to start H2 web console go to http://127.0.0.1:8080/console and you will see a login screen.
-Please use next values:
+Please use the following values:
+Note: make sure the JDBC URL used matches your Props value!
 
     Driver Class: org.h2.Driver
     JDBC URL: jdbc:h2:./obp_api.db;AUTO_SERVER=FALSE
